refactor transaction header and show balance for person in transactions

--- a/src/app/components/CustomDatePicker/date.css
+++ b/src/app/components/CustomDatePicker/date.css
@@ -3,4 +3,10 @@
   border-radius: 4px;
   font-size: 16px;
   padding: 0 !important;
+  width: 100%;
+}
+
+.date-wrapper {
+  height: 100%;
+  width: 100%;
 }
